fix bug making sign invisible again

--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,10 @@ body {
 }
 
 #old-sign {
-    height: 60px;
+    height: 30%;
     width: 90%;
     align-content: center;
-    background: url('../tic-tac-toe/images/ye\ olde\ tic\ tac\ toe.png') no repeat; 
+    background: url('../tic-tac-toe/images/ye\ olde\ tic\ tac\ toe.png') no repeat center center; 
 }
 
 .cell {
@@ -78,7 +78,7 @@ body {
 .board.x .cell:not(.x):not(.o):hover::after,
 .board.o .cell:not(.x):not(.o):hover::before,
 .board.o .cell:not(.x):not(.o):hover::after {
-    background-color: rgb(109, 52, 25);
+    background-color: sienna;
 }
 
 .cell.x::before,
